[Refactored] Upload from branch Pendleton replication

--- a/notebooks/0.0-mbto-split_raw_data.ipynb
+++ b/notebooks/0.0-mbto-split_raw_data.ipynb
@@ -1,15 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Split original dataset into training and testing datasets"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "/home/belu/VS Workplace/2021-re-pendleton-perovskite\n"
+      "/home/belu/VS Workplace/licentiate-thesis-repo\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,11 +48,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Drop all experiments where organic reagent is EtNH3I (see Data Exploration)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -64,11 +64,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Raw data split into balanced training and testing sets "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -86,10 +86,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Train dataset size: 3658 \n Test dataset size: 914\n"
+      "Train dataset size: 3658 \n",
+      " Test dataset size: 914\n"
      ]
     }
    ],
@@ -117,8 +118,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python369jvsc74a57bd04503f7c3eaaf103fa321b77cde35cdda27ecf83413ee8f20a542a6bd46fac0df",
-   "display_name": "Python 3.6.9 64-bit ('2021-re-pendleton-perovskite-OvfDPzZ5': pipenv)"
+   "display_name": "Python 3.6.9 64-bit ('licentiate-thesis-repo-cz9ujhZI': pipenv)",
+   "name": "thesis"
   },
   "language_info": {
    "codemirror_mode": {
