--- a/notebooks/metrics-errors/3.0-mbto-metrics-synthetic-data.ipynb
+++ b/notebooks/metrics-errors/3.0-mbto-metrics-synthetic-data.ipynb
@@ -9,13 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib as plt\n",
     "import seaborn as sns\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
@@ -27,13 +26,12 @@
    "metadata": {},
    "source": [
     "## Scikit-Learn Modified functions\n",
-    "\n",
-    "Functions adapted to received binary labeled matrix"
+    "# Functions adapted to received binary labeled matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20482,7 +20480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   },
   "orig_nbformat": 4
  },
