--- a/notebooks/0.3-mbto-features_to_weights.ipynb
+++ b/notebooks/0.3-mbto-features_to_weights.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Ordering features by importance (rxn-physicochemical properties)- GBC"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "/home/belu/VS Workplace/2021-re-pendleton-perovskite\n"
      ]
@@ -67,8 +67,60 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feats_names_by_importance</th>\n",
+       "      <th>feats_importance_values</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>['_rxn_M_organic' '_rxn_M_inorganic' '_rxn_M_a...</td>\n",
+       "      <td>[0.22842081 0.18604353 0.17251794 0.1607025  0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>['_rxn_M_organic' '_rxn_M_inorganic' '_rxn_M_a...</td>\n",
+       "      <td>[2.26817202e-01 2.09639989e-01 1.63145387e-01 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>['_rxn_M_organic' '_rxn_M_inorganic' '_rxn_M_a...</td>\n",
+       "      <td>[2.23563984e-01 1.93830753e-01 1.62923154e-01 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>['_rxn_M_organic' '_rxn_M_inorganic' '_feat_AS...</td>\n",
+       "      <td>[2.28278260e-01 2.20237248e-01 1.55120340e-01 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>['_rxn_M_organic' '_rxn_M_inorganic' '_rxn_M_a...</td>\n",
+       "      <td>[2.22716525e-01 2.01786642e-01 1.62002408e-01 ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "                           feats_names_by_importance  \\\n",
        "0  ['_rxn_M_organic' '_rxn_M_inorganic' '_rxn_M_a...   \n",
@@ -83,11 +135,11 @@
        "2  [2.23563984e-01 1.93830753e-01 1.62923154e-01 ...  \n",
        "3  [2.28278260e-01 2.20237248e-01 1.55120340e-01 ...  \n",
        "4  [2.22716525e-01 2.01786642e-01 1.62002408e-01 ...  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>feats_names_by_importance</th>\n      <th>feats_importance_values</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>['_rxn_M_organic' '_rxn_M_inorganic' '_rxn_M_a...</td>\n      <td>[0.22842081 0.18604353 0.17251794 0.1607025  0...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>['_rxn_M_organic' '_rxn_M_inorganic' '_rxn_M_a...</td>\n      <td>[2.26817202e-01 2.09639989e-01 1.63145387e-01 ...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>['_rxn_M_organic' '_rxn_M_inorganic' '_rxn_M_a...</td>\n      <td>[2.23563984e-01 1.93830753e-01 1.62923154e-01 ...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>['_rxn_M_organic' '_rxn_M_inorganic' '_feat_AS...</td>\n      <td>[2.28278260e-01 2.20237248e-01 1.55120340e-01 ...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>['_rxn_M_organic' '_rxn_M_inorganic' '_rxn_M_a...</td>\n      <td>[2.22716525e-01 2.01786642e-01 1.62002408e-01 ...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      ]
      },
+     "execution_count": 35,
      "metadata": {},
-     "execution_count": 35
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -100,14 +152,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "75"
       ]
      },
+     "execution_count": 36,
      "metadata": {},
-     "execution_count": 36
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -197,8 +249,60 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>_rxn_M_organic</td>\n",
+       "      <td>0.222841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>_rxn_M_inorganic</td>\n",
+       "      <td>0.202689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>_rxn_M_acid</td>\n",
+       "      <td>0.162786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>_feat_ASA-</td>\n",
+       "      <td>0.146227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>_feat_BalabanIndex</td>\n",
+       "      <td>0.026015</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "              feature    weight\n",
        "0      _rxn_M_organic  0.222841\n",
@@ -206,11 +310,11 @@
        "2         _rxn_M_acid  0.162786\n",
        "3          _feat_ASA-  0.146227\n",
        "4  _feat_BalabanIndex  0.026015"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>feature</th>\n      <th>weight</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>_rxn_M_organic</td>\n      <td>0.222841</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>_rxn_M_inorganic</td>\n      <td>0.202689</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>_rxn_M_acid</td>\n      <td>0.162786</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>_feat_ASA-</td>\n      <td>0.146227</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>_feat_BalabanIndex</td>\n      <td>0.026015</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      ]
      },
+     "execution_count": 68,
      "metadata": {},
-     "execution_count": 68
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -236,8 +340,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python369jvsc74a57bd04503f7c3eaaf103fa321b77cde35cdda27ecf83413ee8f20a542a6bd46fac0df",
-   "display_name": "Python 3.6.9 64-bit ('2021-re-pendleton-perovskite-OvfDPzZ5': pipenv)"
+   "display_name": "thesis-repo",
+   "language": "python",
+   "name": "thesis-repo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -249,9 +354,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
