--- a/notebooks/0-data_exploration/0.1-mbto-data-exploration.ipynb
+++ b/notebooks/0-data_exploration/0.1-mbto-data-exploration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/belu/VS Workplace/licentiate-thesis-repo\n"
+      "/Users/mticona/Documents/tesis/licentiate-thesis-repo\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,54 +130,6 @@
     "df = pd.concat([data.apply(add_column, axis=1, args=(solvent,)) \\\n",
     "                             for solvent, data in solvents_data.items()], axis=0)\\\n",
     "                            .reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['_feat_WienerPolarity', '_feat_BondCount', '_feat_fr_NH0',\n",
-       "       '_feat_Refractivity', '_feat_LargestRingSize', '_feat_fr_ArN',\n",
-       "       '_feat_HeteroaliphaticRingCount', '_feat_fr_quatN', '_feat_msareaVDWp',\n",
-       "       '_feat_AromaticAtomCount', '_feat_AtomCount_C', '_feat_fr_amidine',\n",
-       "       '_feat_CyclomaticNumber', '_feat_LengthPerpendicularToTheMinArea',\n",
-       "       '_feat_fr_guanido', '_feat_donorcount', '_feat_molsurfaceareaVDWp',\n",
-       "       '_feat_fr_NH2', '_feat_minimalprojectionsize', '_feat_AtomCount_N',\n",
-       "       '_feat_ChiralCenterCount', '_feat_WienerIndex', '_feat_AvgPol',\n",
-       "       '_feat_donsitecount', '_feat_Hacceptorcount', '_feat_ASA-',\n",
-       "       '_feat_ProtPolarSurfaceArea', '_feat_fr_Ar_NH',\n",
-       "       '_feat_HeteroaromaticRing Count', '_feat_Accsitecount',\n",
-       "       '_feat_acceptorcount', '_feat_ASA', '_feat_CarboaromaticRingCount',\n",
-       "       '_feat_BalabanIndex', '_feat_SmallestRingSize', '_feat_RingAtomCount',\n",
-       "       '_feat_msareaASAp', '_feat_PolarSurfaceArea',\n",
-       "       '_feat_MinimalProjectionArea', '_feat_MaximalProjectionArea',\n",
-       "       '_feat_CarboRingCount', '_feat_CarboaliphaticRingCount',\n",
-       "       '_feat_VanderWaalsSurfaceArea', '_feat_ASA_H', '_feat_ASA+',\n",
-       "       '_feat_fr_piperdine', '_feat_Aliphatic AtomCount',\n",
-       "       '_feat_AliphaticRingCount', '_feat_AromaticRingCount',\n",
-       "       '_feat_LengthPerpendicularToTheMaxArea', '_feat_HyperWienerIndex',\n",
-       "       '_feat_MolPol', '_feat_fr_Imine', '_feat_fr_dihydropyridine',\n",
-       "       '_feat_fr_piperzine', '_feat_RotatableBondCount',\n",
-       "       '_feat_maximalprojectionsize', '_feat_ChainAtomCount',\n",
-       "       '_feat_MinimalProjectionRadius', '_feat_VanderWaalsVolume',\n",
-       "       '_feat_molsurfaceareaASAp', '_feat_ASA_P', '_feat_Protpsa',\n",
-       "       '_feat_fr_NH1', '_feat_MaximalProjectionRadius', '_feat_Hdonorcount',\n",
-       "       '_feat_fr_pyridine', '_rxn_M_inorganic', '_rxn_M_organic',\n",
-       "       '_rxn_M_acid', '_out_crystalscore', '_rxn_organic-inchikey', 'solvent'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
@@ -1586,9 +1538,9 @@
    "hash": "d07da0965434c7b5286d6cc9b9463c44a85c1c514696f673aad9eb5034120dfe"
   },
   "kernelspec": {
-   "display_name": "thesis-repo",
+   "display_name": "tesis-notebooks",
    "language": "python",
-   "name": "thesis-repo"
+   "name": "tesis-notebooks"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1600,7 +1552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
