--- a/notebooks/1-solvent-experiment/1.2-mbto-plot-comparing-solvent-models.ipynb
+++ b/notebooks/1-solvent-experiment/1.2-mbto-plot-comparing-solvent-models.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "af4bd999",
    "metadata": {},
    "source": [
     "-entrenamos en GBL\n",
@@ -16,7 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
+   "id": "67da4c94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
+   "id": "cc90ae07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,17 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 43,
+   "id": "d7b7793f",
    "metadata": {},
    "outputs": [],
    "source": [
     "solvent_exp_dir = Path(\"../../results2/\")\n",
-    "solvent_drop_dir = Path(\"../../results3/\")"
+    "solvent_drop_dir = Path(\"../../results3/\")\n",
+    "solvent_exp_2 = Path(\"../../results_exp_2/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
+   "id": "03f77ae1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 26,
+   "id": "94718596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +84,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 27,
+   "id": "a26f32a4-1300-4135-a101-58b3101ea218",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Gamma-Butyrolactone', 'Dimethyl sulfoxide', 'Dimethylformamide']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solvents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "20d5d2e3-be71-4573-b152-782b35113f53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sv_keywords = {'GBL': 'Gamma-Butyrolactone',\n",
+    "               'DMSO': 'Dimethyl sulfoxide',\n",
+    "               'DMF': 'Dimethylformamide'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "47e03c25-7215-4550-931c-86e113a32553",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Experiment 2\n",
+    "# Sample from each solvent evaluated in:\n",
+    "# 1. specific model MONO\n",
+    "# 2. multisolvent model MULTI\n",
+    "\n",
+    "exp_tags_preffix = [\"MONO_\", \"MULTI_\"]\n",
+    "\n",
+    "files_keys = [\"model_per\", \"multisolvent\"]\n",
+    "\n",
+    "algorithms = [\"rf\"]\n",
+    "\n",
+    "def get_experiment_solvent_2():\n",
+    "    experiments_info = {}\n",
+    "    for tag_preffix, files_key in zip(exp_tags_preffix, files_keys):\n",
+    "        for sv, sv_name in sv_keywords.items():\n",
+    "            exp_info = {\"keywords\": [sv_name, files_key]\n",
+    "                       }\n",
+    "            experiments_info[tag_preffix+sv] = exp_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "48c8998c-9b33-493e-8a64-1d2e2f0198e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'MONO_GBL': {'keywords': ['Gamma-Butyrolactone', 'model_per']},\n",
+       " 'MONO_DMSO': {'keywords': ['Dimethyl sulfoxide', 'model_per']},\n",
+       " 'MONO_DMF': {'keywords': ['Dimethylformamide', 'model_per']},\n",
+       " 'MULTI_GBL': {'keywords': ['Gamma-Butyrolactone', 'multisolvent']},\n",
+       " 'MULTI_DMSO': {'keywords': ['Dimethyl sulfoxide', 'multisolvent']},\n",
+       " 'MULTI_DMF': {'keywords': ['Dimethylformamide', 'multisolvent']}}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "experiments_info\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d2e15818-433e-4f1f-bc96-25029d6cabe5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PosixPath('../../results_exp_2/sample_105_Dimethylformamide_in_multisolvent.csv')]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files_multi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3aaadb86-f2a2-45e4-be7d-f73b2e89723a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e363a42c-73be-4bf8-a577-a8be2de1f8e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files_solvent_exp = load_files_containing(result_path, key_words=keywords_encoded_solvent)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c5f282b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
+   "id": "244484f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
+   "id": "932ec91b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
+   "id": "d3cbf575",
    "metadata": {},
    "outputs": [
     {
@@ -140,12 +276,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 74,
+   "id": "af0e192f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_melted_classi_report(path):\n",
-    "    hue_1 = 'only_GBL'\n",
+    "def load_melted_classi_report(path, experiment_tag):\n",
     "    report_index = ['No cristaliza', 'Cristaliza', 'accuracy',\n",
     "                    'macro avg', 'weighted avg'] \n",
     "    df = pd.read_csv(path)\n",
@@ -154,30 +290,211 @@
     "                 value_vars=['precision', 'recall','f1-score', 'support'],\n",
     "                 value_name='Score', var_name='Métrica'\n",
     "                )\n",
-    "    df['Tipo'] = 'monosolvente (GBL) ' if hue_1 in path.as_posix() \\\n",
-    "                                        else 'multisolvente'\n",
-    "    return df"
+    "    df[\"Tipo\"] = experiment_tag\n",
+    "    return df\n",
+    "\n",
+    "def merge_files(files_dir, experiments_info):\n",
+    "    experiments_data = []\n",
+    "    \n",
+    "    for experiment_tag, exp_info in experiments_info.items():\n",
+    "        keywords = exp_info[\"keywords\"]\n",
+    "        exp_files_list = load_files_containing(files_dir, key_words=keywords)\n",
+    "\n",
+    "        df_exp_data = pd.concat([load_melted_classi_report(file, experiment_tag) for file \n",
+    "                                                        in exp_files_list],\n",
+    "                                   axis=0)\n",
+    "        experiments_data.append(df_exp_data)\n",
+    "    #merge_class_report = merge_class_report[merge_class_report['Métrica'] != 'support']\n",
+    "    #merge_class_report_by_class = merge_class_report.loc[merge_class_report['Clase']\\\n",
+    "    #                                            .isin(['No cristaliza','Cristaliza'])]\n",
+    "    return pd.concat(experiments_data, axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 75,
+   "id": "bd871d00-8a9d-4b04-906a-b2926796f528",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_report_by_class(files_list):\n",
-    "    merge_class_report = pd.concat([load_melted_classi_report(file) for file \n",
-    "                                                    in files_list],\n",
-    "                               axis=0)\n",
-    "    merge_class_report = merge_class_report[merge_class_report['Métrica'] != 'support']\n",
-    "    merge_class_report_by_class = merge_class_report.loc[merge_class_report['Clase']\\\n",
-    "                                                .isin(['No cristaliza','Cristaliza'])]\n",
-    "    return merge_class_report_by_class"
+    "df_exp2 = merge_files(solvent_exp_2, experiments_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "3722545d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Clase</th>\n",
+       "      <th>Métrica</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Tipo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>No cristaliza</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>0.870000</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cristaliza</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>0.744000</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>accuracy</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>0.856000</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>macro avg</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>0.807000</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>weighted avg</td>\n",
+       "      <td>precision</td>\n",
+       "      <td>0.845024</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>No cristaliza</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.964523</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Cristaliza</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.417040</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>accuracy</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.856000</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>macro avg</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.690782</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>weighted avg</td>\n",
+       "      <td>recall</td>\n",
+       "      <td>0.856000</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>No cristaliza</td>\n",
+       "      <td>f1-score</td>\n",
+       "      <td>0.914826</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Cristaliza</td>\n",
+       "      <td>f1-score</td>\n",
+       "      <td>0.534483</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>accuracy</td>\n",
+       "      <td>f1-score</td>\n",
+       "      <td>0.856000</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>macro avg</td>\n",
+       "      <td>f1-score</td>\n",
+       "      <td>0.724655</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>weighted avg</td>\n",
+       "      <td>f1-score</td>\n",
+       "      <td>0.839434</td>\n",
+       "      <td>MONO_GBL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Clase    Métrica     Score      Tipo\n",
+       "0   No cristaliza  precision  0.870000  MONO_GBL\n",
+       "1      Cristaliza  precision  0.744000  MONO_GBL\n",
+       "2        accuracy  precision  0.856000  MONO_GBL\n",
+       "3       macro avg  precision  0.807000  MONO_GBL\n",
+       "4    weighted avg  precision  0.845024  MONO_GBL\n",
+       "5   No cristaliza     recall  0.964523  MONO_GBL\n",
+       "6      Cristaliza     recall  0.417040  MONO_GBL\n",
+       "7        accuracy     recall  0.856000  MONO_GBL\n",
+       "8       macro avg     recall  0.690782  MONO_GBL\n",
+       "9    weighted avg     recall  0.856000  MONO_GBL\n",
+       "10  No cristaliza   f1-score  0.914826  MONO_GBL\n",
+       "11     Cristaliza   f1-score  0.534483  MONO_GBL\n",
+       "12       accuracy   f1-score  0.856000  MONO_GBL\n",
+       "13      macro avg   f1-score  0.724655  MONO_GBL\n",
+       "14   weighted avg   f1-score  0.839434  MONO_GBL"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_exp2.head(15)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 137,
+   "id": "1cbe30df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,6 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
+   "id": "9b098bf2",
    "metadata": {},
    "outputs": [
     {
@@ -280,6 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
+   "id": "b43a5a60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,6 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
+   "id": "6ec6cc90",
    "metadata": {},
    "outputs": [
     {
@@ -312,6 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
+   "id": "e8f6eef0",
    "metadata": {},
    "outputs": [
     {
@@ -334,6 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d1855764",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -341,9 +663,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "thesis-repo",
+   "display_name": "tesis-notebooks",
    "language": "python",
-   "name": "thesis-repo"
+   "name": "tesis-notebooks"
   },
   "language_info": {
    "codemirror_mode": {
@@ -355,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
