Dev exp solvent

--- a/notebooks/1-solvent-experiment/1.2-mbto-plot-comparing-solvent-models-Copy1.ipynb
+++ b/notebooks/1-solvent-experiment/1.2-mbto-plot-comparing-solvent-models-Copy1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "id": "67da4c94",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "id": "cc90ae07",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "id": "7994f2b7-6b27-4d8a-82cd-d065342e6138",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "id": "03f77ae1",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "94718596",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "a26f32a4-1300-4135-a101-58b3101ea218",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "['Gamma-Butyrolactone', 'Dimethyl sulfoxide', 'Dimethylformamide']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "id": "20d5d2e3-be71-4573-b152-782b35113f53",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "id": "47e03c25-7215-4550-931c-86e113a32553",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "id": "5986cd85-3352-45e8-9c27-0657c27eec42",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "id": "48c8998c-9b33-493e-8a64-1d2e2f0198e8",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        " 'MULTI_DMF': {'keywords': ['Dimethylformamide', 'multisolvent']}}"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,17 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e363a42c-73be-4bf8-a577-a8be2de1f8e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files_solvent_exp = load_files_containing(result_path, key_words=keywords_encoded_solvent)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "c5f282b3",
    "metadata": {},
    "outputs": [],
@@ -216,60 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "244484f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files_solvent_exp = load_files_containing(result_path, key_words=keywords_encoded_solvent)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "id": "932ec91b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files_drop_col_exp = load_files_containing(solvent_drop_dir, key_words=keywords_encoded_solvent,\n",
-    "                                          not_keywords=no_keywords_dropped_solvent)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "d3cbf575",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PosixPath('../../results3/solvent-dropped_Gamma-Butyrolactone_rf_105.csv'),\n",
-       " PosixPath('../../results3/solvent-dropped_Gamma-Butyrolactone_rf_104.csv'),\n",
-       " PosixPath('../../results3/only_GBL_tested_in_Gamma-Butyrolactone_rf_104.csv'),\n",
-       " PosixPath('../../results3/only_GBL_tested_in_Gamma-Butyrolactone_rf_105.csv'),\n",
-       " PosixPath('../../results3/only_GBL_tested_in_Gamma-Butyrolactone_rf_102.csv'),\n",
-       " PosixPath('../../results3/solvent-dropped_Gamma-Butyrolactone_rf_101.csv'),\n",
-       " PosixPath('../../results3/solvent-dropped_Gamma-Butyrolactone_rf_102.csv'),\n",
-       " PosixPath('../../results3/only_GBL_tested_in_Gamma-Butyrolactone_rf_100.csv'),\n",
-       " PosixPath('../../results3/solvent-dropped_Gamma-Butyrolactone_rf_100.csv'),\n",
-       " PosixPath('../../results3/solvent-dropped_Gamma-Butyrolactone_rf_103.csv'),\n",
-       " PosixPath('../../results3/only_GBL_tested_in_Gamma-Butyrolactone_rf_103.csv')]"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "files_drop_col_exp \n",
-    "#= load_files_containing(result_path, key_words=keywords)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "id": "af0e192f",
    "metadata": {},
    "outputs": [],
@@ -305,259 +242,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "id": "bd871d00-8a9d-4b04-906a-b2926796f528",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'solvent_exp_2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_490166/720015659.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_exp_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmerge_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msolvent_exp_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexperiments_info\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'solvent_exp_2' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df_exp_2 = merge_files(solvent_exp_2, experiments_info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "id": "3722545d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Clase</th>\n",
-       "      <th>Métrica</th>\n",
-       "      <th>Score</th>\n",
-       "      <th>Tipo</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>No cristaliza</td>\n",
-       "      <td>precision</td>\n",
-       "      <td>0.941447</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Cristaliza</td>\n",
-       "      <td>precision</td>\n",
-       "      <td>0.677165</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>precision</td>\n",
-       "      <td>0.881778</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>macro avg</td>\n",
-       "      <td>precision</td>\n",
-       "      <td>0.809306</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>weighted avg</td>\n",
-       "      <td>precision</td>\n",
-       "      <td>0.889060</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>No cristaliza</td>\n",
-       "      <td>recall</td>\n",
-       "      <td>0.909091</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Cristaliza</td>\n",
-       "      <td>recall</td>\n",
-       "      <td>0.771300</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>recall</td>\n",
-       "      <td>0.881778</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>macro avg</td>\n",
-       "      <td>recall</td>\n",
-       "      <td>0.840196</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>weighted avg</td>\n",
-       "      <td>recall</td>\n",
-       "      <td>0.881778</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>No cristaliza</td>\n",
-       "      <td>f1-score</td>\n",
-       "      <td>0.924986</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Cristaliza</td>\n",
-       "      <td>f1-score</td>\n",
-       "      <td>0.721174</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>f1-score</td>\n",
-       "      <td>0.881778</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>macro avg</td>\n",
-       "      <td>f1-score</td>\n",
-       "      <td>0.823080</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>weighted avg</td>\n",
-       "      <td>f1-score</td>\n",
-       "      <td>0.884586</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>No cristaliza</td>\n",
-       "      <td>support</td>\n",
-       "      <td>902.000000</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Cristaliza</td>\n",
-       "      <td>support</td>\n",
-       "      <td>223.000000</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>support</td>\n",
-       "      <td>0.881778</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>macro avg</td>\n",
-       "      <td>support</td>\n",
-       "      <td>1125.000000</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>weighted avg</td>\n",
-       "      <td>support</td>\n",
-       "      <td>1125.000000</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>No cristaliza</td>\n",
-       "      <td>matthew</td>\n",
-       "      <td>0.648767</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Cristaliza</td>\n",
-       "      <td>matthew</td>\n",
-       "      <td>0.648767</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>matthew</td>\n",
-       "      <td>0.648767</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>macro avg</td>\n",
-       "      <td>matthew</td>\n",
-       "      <td>0.648767</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>weighted avg</td>\n",
-       "      <td>matthew</td>\n",
-       "      <td>0.648767</td>\n",
-       "      <td>MONO_GBL</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Clase    Métrica        Score      Tipo\n",
-       "0   No cristaliza  precision     0.941447  MONO_GBL\n",
-       "1      Cristaliza  precision     0.677165  MONO_GBL\n",
-       "2        accuracy  precision     0.881778  MONO_GBL\n",
-       "3       macro avg  precision     0.809306  MONO_GBL\n",
-       "4    weighted avg  precision     0.889060  MONO_GBL\n",
-       "5   No cristaliza     recall     0.909091  MONO_GBL\n",
-       "6      Cristaliza     recall     0.771300  MONO_GBL\n",
-       "7        accuracy     recall     0.881778  MONO_GBL\n",
-       "8       macro avg     recall     0.840196  MONO_GBL\n",
-       "9    weighted avg     recall     0.881778  MONO_GBL\n",
-       "10  No cristaliza   f1-score     0.924986  MONO_GBL\n",
-       "11     Cristaliza   f1-score     0.721174  MONO_GBL\n",
-       "12       accuracy   f1-score     0.881778  MONO_GBL\n",
-       "13      macro avg   f1-score     0.823080  MONO_GBL\n",
-       "14   weighted avg   f1-score     0.884586  MONO_GBL\n",
-       "15  No cristaliza    support   902.000000  MONO_GBL\n",
-       "16     Cristaliza    support   223.000000  MONO_GBL\n",
-       "17       accuracy    support     0.881778  MONO_GBL\n",
-       "18      macro avg    support  1125.000000  MONO_GBL\n",
-       "19   weighted avg    support  1125.000000  MONO_GBL\n",
-       "20  No cristaliza    matthew     0.648767  MONO_GBL\n",
-       "21     Cristaliza    matthew     0.648767  MONO_GBL\n",
-       "22       accuracy    matthew     0.648767  MONO_GBL\n",
-       "23      macro avg    matthew     0.648767  MONO_GBL\n",
-       "24   weighted avg    matthew     0.648767  MONO_GBL"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df_exp_2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_490166/1391180695.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_exp_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m25\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_exp_2' is not defined"
+     ]
     }
    ],
    "source": [
@@ -736,9 +456,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tesis-notebooks",
+   "display_name": "thesis-repo",
    "language": "python",
-   "name": "tesis-notebooks"
+   "name": "thesis-repo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -750,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
