--- a/notebooks/2-ensembles/1.1-mbto-solvent-experiment-Copy2.ipynb
+++ b/notebooks/2-ensembles/1.1-mbto-solvent-experiment-Copy2.ipynb
@@ -108,7 +108,9 @@
   {
    "cell_type": "markdown",
    "id": "c4275c7c-1f78-4b1e-b5bc-8bc25daed37a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "El estudio de la cristalización de perovskitas mediante aprendizaje automático encuentra desafíos comunes que surgen a la hora de trabajar con datos de experimentación, cuya disponibilidad suele ser muy acotada debido a la dificultad de su generación. De allí la relevancia de estudiar técnicas que permitan desarrollar modelos robusto y no sesgados por la representación que tiene una acotada cantidad de muestras. En este capítulo se estudia la aplicación del paradigma de ensamble mediante una comparación entre los tradicionales modelos homogéneos basados en árboles de decisión y modelos heterogénos específicos para el problema de cristalización de perovskita en particular.  \n",
     "\n",
